Refactor image loading to use URI instead of URL and add Qodana configuration file